ipc/ipdl/test/ipdl/ok/PmanageSelf.ipdl
include protocol PmanageSelf_Toplevel;

protocol PmanageSelf {
    manager PmanageSelf_Toplevel or PmanageSelf;
    manages PmanageSelf;

child:
    async PmanageSelf();
    async __delete__();
};
