ipc/ipdl/test/ipdl/error/ForgottenManager.ipdl
include protocol ManageeForgot;

// ManageeForgot should have this protocol as its manager.

protocol ForgottenManager {
    manages ManageeForgot;
child:
    async ManageeForgot();
};
